# handler/handler.go
@@ -1,7 +1,9 @@
 package handler
 
 import (
+	"encoding/json"
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -22,12 +24,50 @@ var Users []User = []User{
 // @Tags Role
 // @version 1.0.0
 // @produce json
-// @Success 200 {string} User
+// @Success 200 {array} User
 // @Failure 400 {} string
 // @Failure 404 {} string
 // @Failure 500 {} string
 // @Router /role [get]
 func GetRoles(c *gin.Context) {
-	c.JSON(http.StatusOK, Users)
+	message, err := json.Marshal(&Users)
+	if err != nil {
+		c.String(http.StatusInternalServerError, "Json Parse Error.")
+		return
+	}
+	c.String(http.StatusOK, string(message))
 	return
+}
+
+// @Summary Get one role based on ID
+// @Id getRole
+// @Tags Role
+// @version 1.0.0
+// @produce json
+// @Success 200 {object} User
+// @Failure 400 {} string
+// @Failure 404 {} string
+// @Failure 500 {} string
+// @Router /role/:id [get]
+func GetRole(c *gin.Context) {
+	id, err := strconv.Atoi(c.Param("id"))
+	if err != nil {
+		c.String(http.StatusBadRequest, "Id invalid.")
+		return
+	}
+	ind := -1
+	for i := 0; i < len(Users); i++ {
+		if Users[i].Id == id {
+			ind = i
+			break
+		}
+	}
+	if ind == -1 {
+		c.String(http.StatusBadRequest, "No user with this id.")
+	} else {
+		message, _ := json.Marshal(&Users[ind])
+		c.String(http.StatusOK, string(message))
+	}
+	return
+
 }
